tests/paczka1/fuzzy1/66706680.err
Error in line 12: 7NC4NMMvdGa S374 33,5
Error in line 19: SdWg A354 76,3
Error in line 20: pbzyK S374 33,0
Error in line 22: SdWg S273 63,3
Error in line 24: 7NC4NMMvdGa A354 40,3
Error in line 26: RFwKLWpp73 A354 55,5
